apps/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    enable-reloader-operator-watching: "true"
