apps/authelia/deployment.yaml
# Source: authelia/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  labels:
    app: authelia
    component: authelia
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/version: 4.38.17
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
      app.kubernetes.io/instance: authelia
  revisionHistoryLimit: 5
  replicas: 2
  minReadySeconds: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "100%"
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: authelia
        component: authelia
        app.kubernetes.io/name: authelia
        app.kubernetes.io/instance: authelia
        # sidecar.istio.io/inject: "true"
        app.kubernetes.io/version: 4.38.17
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      affinity:
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: authelia
          image: authelia/authelia:4.39.19
          imagePullPolicy: IfNotPresent
          command: ["authelia"]
          resources:
            requests:
              cpu: 5m
              memory: 150Mi
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - name: http-metrics
              containerPort: 9959
              protocol: TCP
            - name: http
              containerPort: 9091
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /configuration.yaml
              name: authelia-config
              subPath: configuration.yaml
            - mountPath: /secrets
              name: authelia-secret-files
              readOnly: true
      volumes:
        - name: authelia-config
          configMap:
            name: authelia-config
        - name: authelia-secret-files
          secret:
            secretName: authelia-secret-files
      automountServiceAccountToken: false
