apps/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels:
    app: authelia
    component: authelia
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/version: 4.38.17
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: authelia
    app.kubernetes.io/instance: authelia
    app: authelia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: http-metrics
      protocol: TCP
      port: 9959
      targetPort: http-metrics
