apps/authelia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-httproute
  namespace: authelia
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Authelia
    gethomepage.dev/group: Infrastructure & Monitoring
    gethomepage.dev/href: "https://excalidraw.home.alden.ai"
    gethomepage.dev/description: "Forward Auth Proxy"
    gethomepage.dev/icon: authelia.svg
    gethomepage.dev/app: authelia # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: >-
      app in (authelia)
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
    # - group: networking.istio.io
      kind: Gateway
      name: default-https-gateway
      namespace: istio-system

  hostnames:
    - auth.home.alden.ai
  # parentRefs:
  # # - name: default-https-gateway
  # #   namespace: istio-system
  # - kind: Service
  #   name: kanboard
  #   port: 80
  # hostnames:
  # - "kanboard.home.alden.ai"
  rules:
  - backendRefs:
    - name: authelia
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
