apps/authelia/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: authelia-virtualservice
spec:
  hosts:
    - auth.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: authelia.authelia.svc.cluster.local
            port:
              number: 80
